@@ -1,0 +1,1 @@
+{% load cms_tags %}|{% placeholder "main" inherit or %}<p>Ultimate fallback</p>{% endplaceholder %}|
