@@ -10,6 +10,8 @@
   with placeholders.
 * Fixed a bug where placeholder inheritance wouldn't work if the inherited placeholder
   is cached in an ancestor page.
+* Fixed a regression where the code following a ``{% placeholder x or %}`` declaration,
+  was rendered before attempting to inherit content from parent pages.
 
 
 === 3.4.4 (unreleased) ===
